# disjoint-polymorphism

./: .gitignore  LICENSE  Makefile  README.md  SEDEL.cabal  demo.txt  disjoint-intersection.cabal  disjoint-polymorphism.cabal  package.yaml  plan.md
app/: Main.hs
doc/: Makefile  dependency.eps  macros.tex  paper.bib  paper.tex  pipeline.eps  reply.txt  reply2.txt  review.txt  script.rb  slide.tex  submit.txt
doc/sections/: Makefile  applications.mng.tex  applications.tex  background.tex  conclusion.tex  desugar.mng.tex  desugar.tex  discussion.tex  fi.ott  introduction.tex  miniJS.ott  overview.tex  related.tex  sedel.tex  traits.tex
examples/: avg.sl  avg.txt  birds.sl  birds.txt  box.sl  box.txt  case_study.sl  case_study.txt  case_study1.txt  case_study2.txt  comment.sl  comment.txt  evenOdd.sl  evenOdd.txt  expression.sl  expression.txt  expression2.txt  fact.sl  fact.txt  family_self.sl  family_self.txt  fst.sl  fst.txt  higher_kinded.txt  log.txt  merge.txt  middle_self.sl  object_self.sl  object_self.txt  objectalg.txt  point.sl  point.txt  record.sl  record.txt  record2.txt  record3.txt  scan.sl  trait.txt  trivial.sl  trivial.txt  (+9 more)
examples/haskell/: Arith.hs  BoolArith.hs  MiniJS.hs
src/: Common.hs  Env.hs  Environment.hs  Lexer.x  PrettyPrint.hs  SEDEL.hs  Tokens.x  Translation.hs  Utility.hs
src/SEDEL/: Common.hs  Environment.hs  PrettyPrint.hs  Util.hs
src/SEDEL/Parser/: Lexer.x  Parser.y  Parser2.hs
src/SEDEL/Source/: Desugar.hs  Subtyping.hs  Syntax.hs  Typing.hs
src/Source/: Desugar.hs  Env.hs  Parser.y  SrcLoc.hs  Subtyping.hs  Syntax.hs  Typing.hs
test/: Spec.hs
