name:                disjoint-intersection
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/disjoint-intersection#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lexer
                       Environment
                       Common
                       PrettyPrint
                       Utility
                       Source.Parser
                       Source.Syntax
                       Source.Subtyping
                       Source.Typing
                       Source.Desugar
                       Source.SrcLoc
                       Target.Syntax
                       -- Target.Dynamics
                       Target.CBN
  build-depends:       base >= 4.7 && < 5
                     , unbound >= 0.5.1
                     , array
                     , ansi-wl-pprint >= 0.6.7.3
                     , mtl >= 2.2.1
                     , repline >= 0.1.2.0
                     , containers >= 0.5.7.1
  default-language:    Haskell2010
  ghc-options:         -fwarn-incomplete-patterns
  build-tools:         alex
                     , happy

executable disjoint-intersection-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , disjoint-intersection
                     , mtl >= 2.2.1
                     , ansi-wl-pprint >= 0.6.7.3
                     , repline >= 0.1.2.0
  default-language:    Haskell2010

test-suite disjoint-intersection-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , disjoint-intersection
                     , tasty >= 0.11.1
                     , tasty-hspec >= 1.1.3.1
                     , filepath >= 1.4
                     , directory >= 1.3
                     , ansi-wl-pprint >= 0.6.7.3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/disjoint-intersection
