name:                disjoint-polymorphism
version:             0.1.0.0
synopsis:            A prototype-based, statically typed language
description:         Please see README.md
homepage:            https://github.com/bixuanzju/disjoint-polymorphism
license:             BSD3
license-file:        LICENSE
author:              The University of Hong Kong
maintainer:          bixuanxbi@gmail.com
copyright:           2016-2017, The University of Hong Kong
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lexer
                       Environment
                       Common
                       PrettyPrint
                       Utility
                       Source.Parser
                       Source.Syntax
                       Source.Subtyping
                       Source.Typing
                       Source.Desugar
                       Source.SrcLoc
                       Target.Syntax
                       Target.Dynamics
                       Target.CBN
  build-depends:       base >= 4.7 && < 5
                     , unbound >= 0.5.1
                     , array
                     , ansi-wl-pprint >= 0.6.7.3
                     , mtl >= 2.2.1
                     , repline >= 0.1.2.0
                     , containers >= 0.5.7.1
                     , protolude >= 0.1
                     , text >= 1.2
  default-language:    Haskell2010
  ghc-options:        -fwarn-tabs
                      -fwarn-unused-imports
                      -fwarn-missing-signatures
                      -fwarn-name-shadowing
                      -fwarn-incomplete-patterns
  build-tools:         alex
                     , happy

executable disjoint-polymorphism-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , disjoint-polymorphism
                     , mtl >= 2.2.1
                     , ansi-wl-pprint >= 0.6.7.3
                     , repline >= 0.1.2.0
  default-language:    Haskell2010

test-suite disjoint-polymorphism-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , disjoint-polymorphism
                     , tasty >= 0.11.1
                     , tasty-hspec >= 1.1.3.1
                     , filepath >= 1.4
                     , directory >= 1.3
                     , ansi-wl-pprint >= 0.6.7.3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bixuanzju/disjoint-polymorphism
